feat(content): created content entity and CRUD operations
