# ec_backend/src/entities/Content.ts
@@ -1,0 +1,11 @@
+import { ContentTypes } from '@prisma/client';
+
+export default interface Content {
+  id?: number;
+  unitId: number;
+  contentType: ContentTypes;
+  videoId?: string;
+  slideshowId?: string;
+  quizId?: string;
+  order: number;
+}
